--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,9 +1,9 @@
 #postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://92.255.176.96/diploma
+spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
-spring.datasource.password=A@8fxojs2d
+spring.datasource.password=postgres
 
 #for any script-based initialization, i.e. inserting data via data.sql or creating schema via schema.sql
 #for embedded databases such as H2, this is set to always by default
