--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:postgresql://92.255.176.96:5432/diploma
     username: postgres
-    password:
+    password: A@8fxojs2d
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
