--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,21 +14,19 @@ spring:
       hibernate:
         format_sql: true
 
-#    database: postgresql
-#    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   mail:
     host: smtp.yandex.ru
-    username: admin@sagiem.ru
-    password: qizbadipiehqrkjl
+    username: sagiem
+    password: ullgduypnebgwucx
+#    qizbadipiehqrkjl
     port: 465
-    protocol: smtp
-
 #    test-connection: true
     properties:
       "mail.transport.protocol": smtp
       "mail.smtp.auth": true
       "mail.smtp.starttls.enable": true
+
 
 application:
   security:
