--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -72,10 +71,6 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <!--		<dependency>-->
-        <!--			<groupId>org.testcontainers</groupId>-->
-        <!--			<artifactId>postgresql</artifactId>-->
-        <!--		</dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -90,6 +85,11 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -130,7 +130,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-
 
     </dependencies>
 
@@ -235,7 +234,8 @@
                             <goal>check</goal>
                         </goals>
                         <configuration>
-                            <excludeFromFailureFile>${basedir}/config/pmd/exclude-pmd.properties</excludeFromFailureFile>
+                            <excludeFromFailureFile>${basedir}/config/pmd/exclude-pmd.properties
+                            </excludeFromFailureFile>
                         </configuration>
                     </execution>
                     <execution>
@@ -245,7 +245,8 @@
                             <goal>cpd-check</goal>
                         </goals>
                         <configuration>
-                            <excludeFromFailureFile>${basedir}/config/pmd/exclude-cpd.properties</excludeFromFailureFile>
+                            <excludeFromFailureFile>${basedir}/config/pmd/exclude-cpd.properties
+                            </excludeFromFailureFile>
                         </configuration>
                     </execution>
                 </executions>
